First test is ready